--- a/src/sass/common/_variables.scss
+++ b/src/sass/common/_variables.scss
@@ -1,14 +1,21 @@
-$base-font-family: Georgia;
-$secondary-font-family: Arial;
-$headings-font-family: "Times New Roman", monospace;
+$base-font-family: 'Open Sans', sans-serif;
 
 $gray: #626262;
 $gray-light: #b4ad9e;
 $gray-lighter: #f0f0f0;
-$red: #ea1313;
-$black: #000;
+$red: #ff3f40;
+$black: #313030;
 $pink-gray: #f6f2f2;
 $white: #fff;
+
+$grid-gutter-width: 30px;
+$grid-count: 12;
+
+$breakpoints: (
+        sm: 768px,
+        md: 1024px,
+        lg: 1200px
+);
 
 $base-text-color: $gray;
 $link-color: $gray;
