--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -47,3 +47,114 @@ body {
 	}
 }
 
+
+.holder-main-content{
+
+	padding: 0 0 55px 0;
+
+	p{
+		font-size: 16px;
+	}
+
+	h2{
+		margin-bottom: 50px;
+	}
+}
+
+h2{
+	color: #585858;
+	font-size: 42px;
+	line-height: 1.2;
+	text-transform: uppercase;
+	font-weight: 900;
+
+}
+
+.holder-btn{
+	padding-bottom: 120px;
+}
+
+.icon-diamond, .icon-truck, .icon-settings, .icon-pencil{
+	padding-bottom: 25px;
+	color: $red;
+}
+
+.main-about{
+
+	h3{
+		font-size: 24px;
+		color: #737373;
+		padding-bottom: 20px;
+	}
+
+	p{
+		font-size: 16px;
+		color: #737373;
+		padding-bottom: 40px;
+	}
+}
+.hr {
+	padding-bottom: 100px;
+
+	hr {
+		border: 0;
+		width: 1200px;
+		background-color: #ececec;
+		height: 3px;
+	}
+}
+
+.holder-content{
+	text-align: center;
+	margin: 0 auto;
+	padding-bottom: 30px;
+
+	h2{
+		margin-bottom: 35px;
+	}
+
+	p{
+		font-size: 16px;
+	}
+
+}
+.red-hr {
+	padding-bottom: 85px;
+	hr{
+		border: 0;
+		width: 150px;
+		height: 3px;
+		background-color: $red;
+	}
+
+}
+
+
+
+.nav-content{
+	list-style: none;
+	padding: 0;
+	text-align: center;
+
+	li{
+		text-transform: uppercase;
+		margin: 0;
+		display: inline-block;
+		padding: 0 40px;
+		margin-left: -20px;
+		margin-right: -20px;
+
+		a{
+			font-size: 22px;
+			line-height: 1.3;
+			font-weight: 600;
+			text-decoration: none;
+			color: #737373;
+
+			&:hover{
+				color: $red;
+
+			}
+		}
+	}
+}
