--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -171,8 +171,10 @@ h2{
 }
 
 .red-hr2 {
-	position:absolute;
+	padding-bottom: 70px;
+
 	hr{
+		position:absolute;
 		border: 0;
 		width: 135px;
 		height: 3px;
@@ -192,5 +194,49 @@ h2{
 	p {
 		max-width: 460px;
 		font-size: 16px;
+	}
+}
+
+.holder-about{
+
+	h3{
+		font-size: 24px;
+		color: #737373;
+		padding-bottom: 40px;
+		text-transform: uppercase;
+		font-weight: 600;
+	}
+
+	p{
+		font-size: 16px;
+		color: #737373;
+		padding-bottom: 50px;
+	}
+}
+
+.nav-about{
+	list-style: none;
+	padding: 0 0 45px 0;
+
+
+	li{
+
+		margin: 0;
+		display: inline-block;
+		padding: 0 40px 0 0;
+
+
+		a{
+			font-size: 18px;
+			font-style: italic;
+			font-weight: 400;
+			text-decoration: none;
+			color: #737373;
+
+			&:hover{
+				color: $red;
+
+			}
+		}
 	}
 }
