--- a/src/sass/common/_fonts.scss
+++ b/src/sass/common/_fonts.scss
@@ -24,8 +24,9 @@
 
 
   @media (max-width: 320px) {
-    font-size: 20px;
-
+    font-size: 40px;
+    display: block;
+    text-align: center;
   }
 
 
