--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -28,6 +28,10 @@ body {
 	padding: 0 #{$grid-gutter-width / 2};
 	flex-grow: 0;
 	flex-shrink: 0;
+
+	&.center {
+		justify-content: center;
+	}
 }
 
 @for $i from 1 through $grid-count {
@@ -70,9 +74,6 @@ h2{
 
 }
 
-.holder-btn{
-	padding-bottom: 120px;
-}
 
 .icon-diamond, .icon-truck, .icon-settings, .icon-pencil{
 	padding-bottom: 25px;
@@ -131,12 +132,12 @@ h2{
 
 
 
-.nav-content{
+.nav-content {
 	list-style: none;
 	padding: 0;
 	text-align: center;
 
-	li{
+	li {
 		text-transform: uppercase;
 		margin: 0;
 		display: inline-block;
@@ -144,17 +145,26 @@ h2{
 		margin-left: -20px;
 		margin-right: -20px;
 
-		a{
+		a {
 			font-size: 22px;
 			line-height: 1.3;
 			font-weight: 600;
 			text-decoration: none;
 			color: #737373;
 
-			&:hover{
+			&:hover {
 				color: $red;
 
 			}
+		}
+	}
+
+	@media (max-width: 768px) {
+
+		li {
+
+			display: block;
+
 		}
 	}
 }
@@ -162,7 +172,7 @@ h2{
 	padding-bottom: 60px;
 }
 
-.section-2{
+.section-manage{
 	padding-bottom: 140px;
 }
 
@@ -183,7 +193,7 @@ h2{
 
 }
 
-.holder-section-3{
+.holder-section-photo{
 	padding-bottom: 30px;
 
 	h2{
@@ -216,7 +226,7 @@ h2{
 
 .nav-about{
 	list-style: none;
-	padding: 0 0 45px 0;
+	padding: 0 0 25px 0;
 
 
 	li{
@@ -239,4 +249,121 @@ h2{
 			}
 		}
 	}
+}
+
+.common-section {
+	padding: 100px 0;
+}
+
+.block-inverse {
+	color: $white;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.subscribe {
+	h2 {
+		color: #fff;
+		text-transform: none;
+	}
+}
+
+.bg-img {
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+}
+
+.subscribe-form * {
+	color: $base-text-color;
+	font-size: 16px;
+	width: 50%;
+
+	[type="email"],
+	[type="submit"] {
+		appearance: none;
+	}
+
+	.btn-submit {
+		flex-shrink: 0;
+	}
+}
+
+
+.form-item {
+	flex-grow: 1;
+	width: 100%;
+}
+
+.section-photo{
+	padding-bottom: 115px;
+}
+
+.sub {
+	display: flex;
+	margin: 0 auto;
+
+	&.center {
+		justify-content: center;
+	}
+}
+.small-image1 {
+
+	a {
+		display:block;
+		width: 183px;
+		height: 199px;
+		background-image: url(images/photo_john.jpg) ;
+	}
+
+	a:hover {
+		background-image: url(images/photo_john.png) ;
+	}
+}
+
+.small-image2 {
+
+	a {
+		display:block;
+		width: 183px;
+		height: 199px;
+		background-image: url(images/photo_Bil.jpg) ;
+	}
+
+	a:hover {
+		background-image: url(images/photo_Bil.png) ;
+	}
+}
+
+.small-image3 {
+
+	a {
+		display:block;
+		width: 183px;
+		height: 199px;
+		background-image: url(images/photo_slazar.jpg) ;
+	}
+
+	a:hover {
+		background-image: url(images/photo_slazar.png) ;
+	}
+}
+
+.small-image4 {
+
+	a {
+		display:block;
+		width: 183px;
+		height: 199px;
+		background-image: url(images/photo_Tig.jpg) ;
+	}
+
+	a:hover {
+		background-image: url(images/photo_Tig.png) ;
+	}
+}
+.hidden {
+	display: none
 }
