--- a/src/sass/common/_fonts.scss
+++ b/src/sass/common/_fonts.scss
@@ -1,13 +1,12 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?puiyv6');
-  src:  url('fonts/icomoon.eot?puiyv6#iefix') format('embedded-opentype'),
-  url('fonts/icomoon.ttf?puiyv6') format('truetype'),
-  url('fonts/icomoon.woff?puiyv6') format('woff'),
-  url('fonts/icomoon.svg?puiyv6#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?6cml4j');
+  src:  url('fonts/icomoon.eot?6cml4j#iefix') format('embedded-opentype'),
+  url('fonts/icomoon.ttf?6cml4j') format('truetype'),
+  url('fonts/icomoon.woff?6cml4j') format('woff'),
+  url('fonts/icomoon.svg?6cml4j#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
-  font-size: 50px;
 }
 
 [class^="icon-"], [class*=" icon-"] {
@@ -21,19 +20,22 @@
   line-height: 1;
   font-size: 40px;
 
-
-
-  @media (max-width: 320px) {
-    font-size: 40px;
-    display: block;
-    text-align: center;
-  }
-
-
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook:before {
+  content: "\e904";
+}
+.icon-linkedin:before {
+  content: "\e905";
+}
+.icon-twitter:before {
+  content: "\e906";
+}
+.icon-google:before {
+  content: "\e907";
 }
 .icon-diamond:before {
   content: "\e900";
