--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,27 +1,34 @@
 .footer {
 	margin-top: 95px;
-	background-color: $gray-lighter;
-	text-align: right;
+	background-color: #313030;
 	padding: 30px 0 50px 0;
+
 }
 
 .socials {
 	display: inline-block;
 	vertical-align: top;
 	margin-right: -8px;
+	float: right;
 
 	li {
 		display: inline-block;
 		vertical-align: top;
 		padding: 0 8px;
+		font-size: 30px;
 	}
 
 	a {
+		color: #ebebeb;
+
 		text-decoration: none;
 	}
 }
 
-.socials-title {
-	text-transform: capitalize;
+.copyright{
+	color: #fff;
+	display: inline-block;
+	padding: 10px 0;
+
 }
 
