--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -255,15 +255,16 @@ nav {
 }
 
 .btn{
-  border-style: solid;
-  border-radius: 9px;
-  background-color: transparent;
-  border-color: $red;
-  padding: 16px 60px;
-  color: $red;
-  font-size: 18px;
-  text-decoration: none;
-  font-weight: 700;
+	border-style: solid;
+	border-radius: 9px;
+	background-color: transparent;
+	border-color: $red;
+	padding: 16px 60px;
+	color: $red;
+	font-size: 18px;
+	text-decoration: none;
+	font-weight: 700;
+	display: inline-block;
 
   &:hover{
     background-color: $red;
